# ynab-updater

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  go.mod  go.sum
authoriser/: main.go
src/: lib.rs
