[package]
name = "ynab-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
cty = "0.2.2"
env_logger = "0.10.0"
httparse = "1.8.0"
libc = "0.2.153"
log = "0.4.19"
pushover = "0.4.0"
regex = "1"
reqwest = { version = "0.11", features = ["cookies", "json"] }
scraper = "0.16.0"
serde = "1.0.164"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
system-deps = "6.2.2"

[package.metadata.system-deps]
systemd = "0.0.0"

